--- a/index.html
+++ b/index.html
@@ -3,11 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <title>Liz Larkin</title>
 </head>
 <body>
-    <h1>Style Test</h1>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </div>
+        </div>
+    </nav>
+
+    <!-- Container -->
+    <div class="container">
+        <!-- Basic Information Row -->
+        <div class="row">
+            <div class="col-sm-6">
+              <h1>Liz Larkin</h1>
+              <h3>San Francisco, CA</h3>
+              <h3>(415) 350-4012</h3>
+              <h3>enlarkin@gmail.com</h3>
+            </div>
+            <div class="col-sm-6">
+              About Picture
+            </div>
+        </div>
+        <!-- Buttons Row -->
+        <div class="row">
+            <div class="col-sm-3">
+              Button 1
+            </div>
+            <div class="col-sm-3">
+                Button 2
+            </div>
+            <div class="col-sm-3">
+                Button 3
+            </div>
+            <div class="col-sm-3">
+                Button 4
+            </div>
+        </div>
+        <!-- Dynamic Content Row -->
+        <div class="row">
+            <div class="col-sm-12">
+              Dynamic Content
+            </div>
+        </div>
+
+    </div>
+
+
     <script src="assets/app.js"></script>
 </body>
 </html>
