--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-sm-6">
               <h1>Liz Larkin</h1>
               <h3>San Francisco, CA</h3>
-              <h3>(415) 350-4012</h3>
+              <h3>(415) 551-1700</h3>
               <h3>enlarkin@gmail.com</h3>
             </div>
             <div class="col-sm-6">
@@ -41,28 +41,38 @@
         <!-- Buttons Row -->
         <div class="row">
             <div class="col-sm-3">
-              Button 1
+                <button id = "about-button">About</button>
             </div>
             <div class="col-sm-3">
-                Button 2
+                <button id = "resume-button">Resume</button>
             </div>
             <div class="col-sm-3">
-                Button 3
+                <button id = "portfolio-button">Portfolio</button>
             </div>
             <div class="col-sm-3">
-                Button 4
+                <button id = "links-button">Links</button>
             </div>
         </div>
-        <!-- Dynamic Content Row -->
-        <div class="row">
-            <div class="col-sm-12">
-              Dynamic Content
+        <!-- Dynamic Content -->
+        <div class="row" id = "dyanamic-div">
+            <div class="col-sm-12" id = "about-div">
+              About Dynamic Content
+            </div>
+            <div class="col-sm-12" id = "resume-div">
+              Resume Dynamic Content
+            </div>
+            <div class="col-sm-12" id = "portfolio-div">
+              Portfolio Dynamic Content
+            </div>
+            <div class="col-sm-12" id = "links-div">
+              Links Dynamic Content
             </div>
         </div>
 
     </div>
 
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="assets/app.js"></script>
 </body>
 </html>
