added Elmo pictures to About Me section, including responsiveness for browsing on various devices

--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
               <p>
                 I have twice thrown out the ceremonial first pitch at an Oakland A's game -- each time dressed like Elmo.
               </p>
+              <div class="row">
+                <div class="col-sm-4" id = "elmo-div">
+                  <img src="assets/elmo2.jpg" alt="Elmo">
+                </div>
+                <div class="col-sm-4" id = "elmo-div">
+                  <img src="assets/elmo1.jpg" alt="Elmo">
+                </div>
+                <div class="col-sm-4" id = "elmo-div">
+                  <img src="assets/elmo3.jpg" alt="Elmo">
+                </div>
+              </div>
             </div>
             <!-- Resume Dynamic Content -->
             <div class="col-sm-12" id = "resume-div">
