added styling to main section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Basic Information Row -->
         <div class="row" id = "main-row">
           <div class="col-sm-4" id = "main-left">
-            picture 1
+              <!-- <img src="assets/wedding.jpg" alt="wedding picture" id ="left-picture"> -->
           </div>
           <div class="col-sm-4" id = "main-center">
             <div id = "basic-info">
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="col-sm-4" id = "main-right">
-            picture 2
+
           </div>
         </div>
         <!-- Buttons Row -->
@@ -78,7 +78,7 @@
                   <img src="assets/elmo2.jpg" alt="Elmo">
                 </div>
                 <div class="col-sm-4" id = "elmo-div">
-                  <img src="assets/elmo1.jpg" alt="Elmo">
+                  <img src="assets/elmo.jpg" alt="Elmo">
                 </div>
                 <div class="col-sm-4" id = "elmo-div">
                   <img src="assets/elmo3.jpg" alt="Elmo">
