--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
     <title>Liz Larkin</title>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </div>
-        </div>
+    <!-- Header -->
+    <nav class="navbar navbar-light bg-dark">
+      <span class="navbar-brand mb-0 h1">Liz Larkin Portfolio</span>
     </nav>
 
     <!-- Container -->
@@ -59,45 +48,40 @@
             </div>
         </div>
         <!-- Dynamic Content -->
-        <div class="row" id = "dyanamic-div">
-            <div class="col-sm-12" id = "about-div">
-              <p>
-                I was born and raised in San Francisco, CA. I'm a graduate of St. Ignatius College Prep High School, I have a BA from Cornell University, and I have an MBA from UC Berkeley Haas School of Business.
-              </p>
-              <p>
-                Descending from generations of unathletic ancestors, I rebelled by following and playing sports. I played for and captained the Cornell Varsity Women's Softball Team. Now I like to spend any free time I can find on the golf course or watching my favorite local teams. 
-              </p>
-              <p>
-                In 2018 I married my husband Aaron in Lake Tahoe. 
-              </p>
-              <p>
-                I have twice thrown out the ceremonial first pitch at an Oakland A's game -- each time dressed like Elmo.
-              </p>
-              <div class="row">
-                <div class="col-sm-4" id = "elmo-div">
-                  <img src="assets/elmo2.jpg" alt="Elmo">
-                </div>
-                <div class="col-sm-4" id = "elmo-div">
-                  <img src="assets/elmo.jpg" alt="Elmo">
-                </div>
-                <div class="col-sm-4" id = "elmo-div">
-                  <img src="assets/elmo3.jpg" alt="Elmo">
-                </div>
-              </div>
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8" id = "about-div">
+                <p>
+                  I was born and raised in San Francisco, CA. I'm a graduate of St. Ignatius College Prep High School, I have a BA from Cornell University, and I have an MBA from UC Berkeley Haas School of Business.
+                </p>
+                <p>
+                  Descending from generations of unathletic ancestors, I rebelled by following and playing sports. I played for and captained the Cornell Varsity Women's Softball Team. Now I like to spend any free time I can find on the golf course or watching my favorite local teams. 
+                </p>
+                <p>
+                  In 2018 I married my husband Aaron in Lake Tahoe. 
+                </p>
+                <p>
+                  I have twice thrown out the ceremonial first pitch at an Oakland A's game -- each time dressed like Elmo.
+                </p>
+                <img src="assets/elmo1.jpg" alt="Elmo" id = "elmo-picture">
             </div>
+            <div class="col-sm-2"></div>
+        </div>  
             <!-- Resume Dynamic Content -->
-            <div class="col-sm-12" id = "resume-div">
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8" id = "resume-div">
               <div id = "resume-header">
                 <h4>Elizabeth Larkin</h4>
                 <h6>enlarkin@gmail.com</h6>
                 <h6>415-551-1700</h6>
                 <h6>San Francisco, CA</h6>
-                <a href = "assets/Elizabeth Larkin Resume.pdf" target="_blank">Download PDF Resume Here</a>
+                <a href = "assets/Elizabeth-Larkin-Resume.pdf">Download PDF Resume Here</a>
               </div>
-              <div id = "resume-heading">
+              <div class = "resume-heading">
                 <h6>Highland Technology, Inc. <span class = dates>2008-present</span></h6>
               </div>
-              <div id = "resume-content"></div>
+              <div class = "resume-content"></div>
               <p>Vice President <span class = dates>2016-present</span></p>
               <ul>
                 <li>Direct company business and finance activities</li>
@@ -124,10 +108,10 @@
                 <li>Generate fabrication instructions, bills of materials, assembly drawings, and release documentation </li>
                 <li>Identify and document procedures to minimize errors and standardize content and file structures</li>
               </ul>
-              <div id = "resume-heading">
+              <div class = "resume-heading">
                 <h6>Education </h6>
               </div>
-              <div id = "resume-content"></div>
+              <div class = "resume-content"></div>
               <p>Cornell University <span class = dates>2004-2008</span></p>
               <ul>
                 <li>Bachelor of Arts, Psychology</li>
@@ -144,10 +128,10 @@
               <ul>
                 <li>Certificate of Completion in progress</li>
               </ul>
-              <div id = "resume-heading">
+              <div class = "resume-heading">
                 <h6>Activities </h6>
               </div>
-              <div id = "resume-content"></div>
+              <div class = "resume-content"></div>
               <p>Youth Softball Coach  </p>
               <ul>
                 <li>Rooftop Alternative Middle School <span class = dates>2008-2014</span></li>
@@ -163,28 +147,60 @@
               <p>Avid skier, golfer, and Giants/49ers fan</p>
              
             </div>
+            <div class="col-sm-2"></div>
+      </div>
             <!-- Portfolio Dynamic Content -->
-            <div class="col-sm-12" id = "portfolio-div">
-              
+      <div class="row" id = "portfolio-div">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3" id = "portfolio-aside1">
+                <h3>Weather App</h3>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = "https://lizlarkin.github.io/Weather_App/weather.html" target="_blank">Deployed Link</a>
+                </div>
+                <img src="assets/weather_app.png" alt="Weather App">
             </div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-3" id = "portfolio-aside2">
+              <h3>API Project</h3>
+              <div class = "link">
+                <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
+              </div>
+              <div class = "link">
+                <a href = "https://mikefogz.github.io/API-Project1/" target="_blank">Deployed Link</a>
+              </div>
+              <img src="assets/api_project.png" alt="API Project Screenshot">
+          </div>
+            <div class="col-sm-2"></div>
+      </div>
             <!-- Links Dynamic Content -->
-            <div class="col-sm-12" id = "links-div">
-              <div id = "link">
+      <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8" id = "links-div">
+              <div class = "link">
                 <a href = "https://github.com/lizlarkin" target="_blank">GitHub</a>
               </div>
-              <div id = "link">
+              <div class = "link">
                 <a href = "https://www.linkedin.com/in/larkinelizabeth" target="_blank">LinkedIn</a>
               </div>
-              <div id = "link">
+              <div class = "link">
                 <a href = "https://www.highlandtechnology.com/" target="_blank">Highland Technology</a>
               </div>
             </div>
-        </div>
-
+            <div class="col-sm-2"></div>
+      </div>
     </div>
-
+    <!-- Footer -->
+    <Footer>
+      <nav class="navbar fixed-bottom navbar-light bg-dark">
+          <p id = "footer">&#169; copyright 2020</p>
+      </nav>
+    </Footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="assets/app.js"></script>
 </body>
+
 </html>
