changed layout of portfolio section to better display content and improve scalability

--- a/index.html
+++ b/index.html
@@ -150,20 +150,27 @@
             <div class="col-sm-2"></div>
       </div>
             <!-- Portfolio Dynamic Content -->
-      <div class="row" id = "portfolio-div">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-3" id = "portfolio-aside1">
-                <h3>Weather App</h3>
-                <div class = "link">
-                  <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
-                </div>
-                <div class = "link">
-                  <a href = "https://lizlarkin.github.io/Weather_App/weather.html" target="_blank">Deployed Link</a>
-                </div>
-                <img src="assets/weather_app.png" alt="Weather App">
-            </div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-3" id = "portfolio-aside2">
+      <div class="row" id= "portfolio-section">
+        <div class = "col-sm-12">
+
+        <div class="row" id = "portfolio-div">
+              <div class="col-sm-1"></div>
+              <div class="col-sm-10" id = "portfolio-aside1">
+                  <h3>Weather App</h3>
+                  <div class = "link">
+                    <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
+                  </div>
+                  <div class = "link">
+                    <a href = "https://lizlarkin.github.io/Weather_App/weather.html" target="_blank">Deployed Link</a>
+                  </div>
+                  <img src="assets/weather_app.png" alt="Weather App">
+              </div>
+              <div class="col-sm-1"></div>
+        </div>
+
+        <div class="row" id = "portfolio-div">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10" id = "portfolio-aside1">
               <h3>API Project</h3>
               <div class = "link">
                 <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
@@ -173,7 +180,10 @@
               </div>
               <img src="assets/api_project.png" alt="API Project Screenshot">
           </div>
-            <div class="col-sm-2"></div>
+          <div class="col-sm-1"></div>
+        </div>
+
+        </div>
       </div>
             <!-- Links Dynamic Content -->
       <div class="row">
