--- a/index.html
+++ b/index.html
@@ -153,24 +153,30 @@
       <div class="row" id= "portfolio-section">
         <div class = "col-sm-12">
 
-        <div class="row" id = "portfolio-div">
+        <div class="row">
               <div class="col-sm-1"></div>
-              <div class="col-sm-10" id = "portfolio-aside1">
+              <div class="col-sm-10 project-row">
                   <h3>Weather App</h3>
-                  <div class = "link">
-                    <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
+                  <div class = "row">
+                  <div class = "col-sm-5">
+                      <img src="assets/weather_app.png" alt="Weather App">
                   </div>
-                  <div class = "link">
-                    <a href = "https://lizlarkin.github.io/Weather_App/weather.html" target="_blank">Deployed Link</a>
+                  <div class = "col-sm-5">
+                    <div class = "link">
+                      <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
+                    </div>
+                    <div class = "link">
+                      <a href = "https://lizlarkin.github.io/Weather_App/weather.html" target="_blank">Deployed Link</a>
+                    </div>
                   </div>
-                  <img src="assets/weather_app.png" alt="Weather App">
+                </div>
               </div>
               <div class="col-sm-1"></div>
         </div>
 
-        <div class="row" id = "portfolio-div">
+        <div class="row">
           <div class="col-sm-1"></div>
-          <div class="col-sm-10" id = "portfolio-aside1">
+          <div class="col-sm-10 project-row">
               <h3>API Project</h3>
               <div class = "link">
                 <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
