updated existing portfolio content

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                       <img src="assets/weather_app.png" alt="Weather App">
                   </div>
                   <div class = "col-sm-5">
+                    <h5> Links </h5>
                     <div class = "link">
                       <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
                     </div>
@@ -178,16 +179,23 @@
           <div class="col-sm-1"></div>
           <div class="col-sm-10 project-row">
               <h3>API Project</h3>
-              <div class = "link">
-                <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
+              <div class = "row">
+              <div class = "col-sm-5">
+                <img src="assets/api_project.png" alt="API Project Screenshot">
               </div>
-              <div class = "link">
-                <a href = "https://mikefogz.github.io/API-Project1/" target="_blank">Deployed Link</a>
+              <div class = "col-sm-5">
+                <h5> Links </h5>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = "https://mikefogz.github.io/API-Project1/" target="_blank">Deployed Link</a>
+                </div>
               </div>
-              <img src="assets/api_project.png" alt="API Project Screenshot">
+            </div>
           </div>
           <div class="col-sm-1"></div>
-        </div>
+    </div>
 
         </div>
       </div>
