--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
         <div class = "col-sm-12">
 
         <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10 project-row">
+                <h3>Dog Blog</h3>
+                <div class = "row">
+                <div class = "col-sm-5">
+                  <img src="assets/dog_blog.png" alt="API Project Screenshot">
+                </div>
+                <div class = "col-sm-5">
+                  <h5> Links </h5>
+                  <div class = "link">
+                    <a href = "https://github.com/lizlarkin/dog_blog" target="_blank">GitHub Repository</a>
+                  </div>
+                  <div class = "link">
+                    <a href = "https://dog-blog-app.herokuapp.com/" target="_blank">Deployed Link</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-1"></div>
+        </div>
+
+        <div class="row">
               <div class="col-sm-1"></div>
               <div class="col-sm-10 project-row">
                   <h3>Weather App</h3>
@@ -195,7 +217,7 @@
             </div>
           </div>
           <div class="col-sm-1"></div>
-    </div>
+        </div>
 
         </div>
       </div>
