--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h3>Dog Blog</h3>
                 <div class = "row">
                 <div class = "col-sm-5">
-                  <img src="assets/dog_blog.png" alt="API Project Screenshot">
+                  <img src="assets/dog_blog.png" alt="Dog Blog Screenshot">
                 </div>
                 <div class = "col-sm-5">
                   <h5> Links </h5>
@@ -173,6 +173,28 @@
               </div>
             </div>
             <div class="col-sm-1"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10 project-row">
+              <h3>Eat Da Burger</h3>
+              <div class = "row">
+              <div class = "col-sm-5">
+                <img src="assets/burger.png" alt="Eat Da Burger Screenshot">
+              </div>
+              <div class = "col-sm-5">
+                <h5> Links </h5>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/Burger" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = " https://larkin-burger.herokuapp.com/" target="_blank">Deployed Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-1"></div>
         </div>
 
         <div class="row">
