added employee tracker project

--- a/index.html
+++ b/index.html
@@ -222,6 +222,28 @@
         <div class="row">
           <div class="col-sm-1"></div>
           <div class="col-sm-10 project-row">
+              <h3>Employee Tracker</h3>
+              <div class = "row">
+              <div class = "col-sm-5">
+                <img src="assets/employee_tracker.png" alt="Employee Tracker Screenshot">
+              </div>
+              <div class = "col-sm-5">
+                <h5> Links </h5>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/Employee_Tracker" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = "https://drive.google.com/file/d/1vu2FytRgHwVs3ufPwMmMbO2_S5pKrTh-/view" target="_blank">Demo Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-1"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10 project-row">
               <h3>API Project</h3>
               <div class = "row">
               <div class = "col-sm-5">
