--- a/index.html
+++ b/index.html
@@ -285,6 +285,28 @@
           <div class="col-sm-1"></div>
         </div>
 
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10 project-row">
+              <h3>Password Generator</h3>
+              <div class = "row">
+              <div class = "col-sm-5">
+                <img src="assets/password.png" alt="Password Generator Screenshot">
+              </div>
+              <div class = "col-sm-5">
+                <h5> Links </h5>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/Password_Generator" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = "https://lizlarkin.github.io/Password_Generator/" target="_blank">Deployed Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-1"></div>
+        </div>
+
         </div>
       </div>
             <!-- Links Dynamic Content -->
