added readme generator project

--- a/index.html
+++ b/index.html
@@ -307,6 +307,28 @@
           <div class="col-sm-1"></div>
         </div>
 
+        <div class="row">
+          <div class="col-sm-1"></div>
+          <div class="col-sm-10 project-row">
+              <h3>README Generator</h3>
+              <div class = "row">
+              <div class = "col-sm-5">
+                <img src="assets/readme.png" alt="Readme Generator Screenshot">
+              </div>
+              <div class = "col-sm-5">
+                <h5> Links </h5>
+                <div class = "link">
+                  <a href = "https://github.com/lizlarkin/Readme_Generator" target="_blank">GitHub Repository</a>
+                </div>
+                <div class = "link">
+                  <a href = "https://drive.google.com/file/d/1RoX7FvnBukXsvjoqumeLOmcmofWSwDA6/view" target="_blank">Demo Video</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-1"></div>
+        </div>
+
         </div>
       </div>
             <!-- Links Dynamic Content -->
