added styling, particularly margins, within portfolio rows

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class = "col-sm-5">
                   <img src="assets/dog_blog.png" alt="Dog Blog Screenshot">
                 </div>
-                <div class = "col-sm-5">
+                <div class = "col-sm-5 right">
                   <h6> Uses Sequelize, Pug, Google Maps API, etc. to create blog geared towards dogs </h6>
                   <div class = "link">
                     <a href = "https://github.com/lizlarkin/dog_blog" target="_blank">GitHub Repository</a>
@@ -183,7 +183,7 @@
               <div class = "col-sm-5">
                 <img src="assets/burger.png" alt="Eat Da Burger Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Input and "devour" burger types on front-end, while back end manages/stores burger data </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/Burger" target="_blank">GitHub Repository</a>
@@ -205,7 +205,7 @@
                   <div class = "col-sm-5">
                       <img src="assets/weather_app.png" alt="Weather App">
                   </div>
-                  <div class = "col-sm-5">
+                  <div class = "col-sm-5 right">
                     <h6> Dynamic weather app using data from Open Weather API </h6>
                     <div class = "link">
                       <a href = "https://github.com/lizlarkin/Weather_App" target="_blank">GitHub Repository</a>
@@ -227,7 +227,7 @@
               <div class = "col-sm-5">
                 <img src="assets/employee_tracker.png" alt="Employee Tracker Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Uses Inquirer and MySQL to view and modify employee names, departments, and roles through CLI </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/Employee_Tracker" target="_blank">GitHub Repository</a>
@@ -249,7 +249,7 @@
               <div class = "col-sm-5">
                 <img src="assets/api_project.png" alt="API Project Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Uses Foundation, Open Weather API, Smarty Streets API, and COVID Now API to connect and display data </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/API-Project1" target="_blank">GitHub Repository</a>
@@ -271,7 +271,7 @@
               <div class = "col-sm-5">
                 <img src="assets/team_generator.png" alt="Team Profile Generator Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Respond to CLI prompts about professional team members to dynamically generate organizational-chart-esque HTML file </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/Team_Generator" target="_blank">GitHub Repository</a>
@@ -293,7 +293,7 @@
               <div class = "col-sm-5">
                 <img src="assets/password.png" alt="Password Generator Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Automatically generate and display password based on user preferences </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/Password_Generator" target="_blank">GitHub Repository</a>
@@ -315,7 +315,7 @@
               <div class = "col-sm-5">
                 <img src="assets/readme.png" alt="Readme Generator Screenshot">
               </div>
-              <div class = "col-sm-5">
+              <div class = "col-sm-5 right">
                 <h6> Command-line readme guide that adds content to Markdown file </h6>
                 <div class = "link">
                   <a href = "https://github.com/lizlarkin/Readme_Generator" target="_blank">GitHub Repository</a>
